updated with ecs cluster and task stacks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
   "include": [
     "src/**/*.ts",
     "bin/*.json"
-  ],
+, "src/ec2-install-chronicle.ts.old"  ],
   "exclude": [
     "cdk.out"
   ]
